# p528

./: .gitignore  .zenodo.json  CITATION.cff  CMakeLists.txt  ERROR_AND_WARNINGS.md  LICENSE.md  README.md
.github/workflows/: github_actions_build.yml
P528Drvr/: P528Drvr.cpp  P528Drvr.h  P528Drvr.rc  P528Drvr.vcxproj  P528Drvr.vcxproj.filters  resource.h
Tests/: CMakeLists.txt  main.cpp
dotnet/: p528_dotnet.sln
dotnet/ITS.Propagation.P528/: ITS.Propagation.P528.csproj  LineOfSightParams.cs  P528.cs  P528LineOfSightParams.cs  P528Path.cs  P528Result.cs  P528Terminal.cs  P528TroposcatterParams.cs  Path.cs  Result.cs  Terminal.cs  TroposcatterParams.cs
dotnet/ITS.Propagation.P528/Properties/: AssemblyInfo.cs
dotnet/nuget/: P528.5.0.0.nupkg  p528.nuspec
dotnet/nuget/lib/net472/: ITS.Propagation.P528.xml
include/: LOSTable.h  p528.h  p676.h  p835.h
linux/: CMakeLists.txt  README.md  build.sh
src/: AbsorptionParameters.cpp  CalculateEffectiveRayLength.cpp  CombineDistributions.cpp  FindKForYpiAt99Percent.cpp  GetPathLoss.cpp  InverseComplementaryCumulativeDistributionFunction.cpp  LOSTable.cpp  LineOfSight.cpp  LinearInterpolation.cpp  LongTermVariability.cpp  Main.cpp  MainEx.cpp  MeanAnnualGlobalReferenceAtmosphere.cpp  NakagamiRice.cpp  OxygenData.cpp  P528.cpp  P528Ex.cpp  RayOptics.cpp  RayTrace.cpp  ReflectionCoefficients.cpp  SmoothEarthDiffraction.cpp  TerminalGeometry.cpp  Thayer.cpp  TranshorizonAbsorptionLoss.cpp  TranshorizonSearch.cpp  Troposcatter.cpp  ValidateInputs.cpp  data.cpp
src/p528/: AbsorptionParameters.cpp  CalculateEffectiveRayLength.cpp  CombineDistributions.cpp  FindKForYpiAt99Percent.cpp  GetPathLoss.cpp  InverseComplementaryCumulativeDistributionFunction.cpp  LineOfSight.cpp  LinearInterpolation.cpp  LongTermVariability.cpp  NakagamiRice.cpp  P528.cpp  RayOptics.cpp  ReflectionCoefficients.cpp  SmoothEarthDiffraction.cpp  TerminalGeometry.cpp  TranshorizonSearch.cpp  Troposcatter.cpp  ValidateInputs.cpp  data.cpp
src/p676/: GaseousAttenuation.cpp  GlobalWetPressure.cpp  LineShapeFactor.cpp  NonresonantDebyeAttenuation.cpp  OxygenData.cpp  RayTrace.cpp  RefractiveIndex.cpp  Refractivity.cpp  SlantPath.cpp  SpecificAttenuation.cpp  TerrestrialPath.cpp  WaterVapourData.cpp  WaterVapourDensityToPartialPressure.cpp
src/p835/: Conversions.cpp  MeanAnnualGlobalReferenceAtmosphere.cpp
tests/: README.md
tests/cpp/: CMakeLists.txt  build.sh  testP528.cpp
tests/js/: package-lock.json  package.json  testP528.js
wasm/: CMakeLists.txt  build-wasm-lib.sh  build-wasm.sh  p528json.cpp  par_for.h
win32/: SpecificAttenuation.cpp  WaterVapourData.cpp  p528.aps  p528.def  p528.rc  p528.sln  p528.vcxproj  p528.vcxproj.filters  resource.h
win32/Manual/: Manual.csproj  Program.cs
win32/Manual/Properties/: AssemblyInfo.cs
